# dbus-rs

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: dbus-rs-github-ci.yml
async/dbus-tokio/: Cargo.toml  README.md
async/dbus-tokio/examples/: tokio_server.rs
async/dbus-tokio/src/: adriver.rs  awatch.rs  lib.rs  tree.rs
attic/dbus-futures/: Cargo.toml  README.md
attic/dbus-futures/src/: connection.rs
attic/examples/: adv_server.rs  unity_focused_window.rs
codegen/dbus-codegen/: Cargo.toml  README.md
codegen/dbus-codegen/src/: generate.rs  lib.rs  main.rs
codegen/dbus-codegen/tests/: test1.rs  test2.rs
dbus/: Cargo.toml
dbus-codegen/: Cargo.toml  README.md
dbus-codegen-tests/: Cargo.toml  build.rs
dbus-codegen-tests/src/: lib.rs  user_type.rs
dbus-codegen-tests/tests/: test1.rs  test2.rs  test_asref.rs  test_asref_mtsync.rs  test_cr.rs  test_parse_properties.rs  test_user_types.rs
dbus-codegen-tests/tests/policykit/: mod.rs
dbus-codegen-tests/tests/policykit_asref/: mod.rs
dbus-codegen-tests/tests/policykit_asref_mtsync/: mod.rs
dbus-codegen-tests/tests/policykit_blocking/: mod.rs
dbus-codegen-tests/tests/policykit_client/: mod.rs
dbus-codegen-tests/tests/policykit_cr/: mod.rs
dbus-codegen-tests/tests/policykit_nonblock/: mod.rs
dbus-codegen-tests/tests/user_types_dbus/: mod.rs  user_types_blocking.rs  user_types_client.rs  user_types_cr.rs  user_types_nonblock.rs
dbus-codegen/data/: org.freedesktop.DBus.xml  standard_interfaces.xml
dbus-codegen/examples/: adv_server.rs  adv_server_codegen.rs  laundry_cr.rs
dbus-codegen/src/: generate.rs  generator.rs  lib.rs  main.rs
dbus-codegen/src/generate/: types.rs  write.rs
dbus-codegen/src/generator/: definitions.rs  types.rs  write.rs
dbus-codegen/tests/: test1.rs  test2.rs
dbus-crossroads/: Cargo.toml  Problems.md  README.md
dbus-crossroads/examples/: server_cr.rs  tokio02_server_cr.rs
dbus-crossroads/src/: context.rs  crossroads.rs  handlers.rs  ifacedesc.rs  info.rs  lib.rs  mod.rs  path.rs  stdimpl.rs  test.rs
dbus-crossroads/src_old/: handlers.rs  lib.rs  stdimpl.rs
dbus-derive/: .gitignore  Cargo.toml  README.md
dbus-derive/src/: lib.rs
dbus-derive/tests/: ui.rs
dbus-derive/tests/ui/: enum-doesnt-impl-traits.rs  field-not-arg.stderr  not-a-valid-struct.rs  prop-map-not-option.stderr
dbus-futures/: Cargo.toml  README.md
dbus-futures/src/: connection.rs  lib.rs  stdintf.rs  thin_main_loop.rs  tokio.rs
dbus-macros/: Cargo.toml
dbus-macros/src/: derive_args.rs  derive_enum.rs  derive_propmap.rs  derive_struct.rs  util.rs
dbus-macros/tests/: correct-signature.rs  propmap-rename.rs
dbus-macros/tests/ui/: enum-doesnt-impl-traits.stderr  field-not-arg.rs  not-a-valid-struct.stderr  prop-map-not-option.rs
dbus-native/: Cargo.toml  README.md
dbus-native-channel/: Cargo.toml
dbus-native-channel/src/: address.rs  authentication.rs  lib.rs  sys.rs
dbus-native/src/: address.rs  authentication.rs  lib.rs  machineid.rs  marshalled.rs  message.rs  names.rs  strings.rs  sys.rs  types.rs
dbus-native/tests/: upandrunning.rs
dbus-strings/: Cargo.toml
dbus-strings/src/: lib.rs  validity.rs
dbus-tokio/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
dbus-tokio/examples/: tokio02_client.rs  tokio02_server_cr.rs  tokio02_server_cr.rs.disabled  tokio_adv_server_cr.rs  tokio_client.rs  tokio_server.rs  tokio_server.rs.old  tokio_server_cr.rs
dbus-tokio/src/: adriver.rs  connection.rs  lib.rs  tree.rs
dbus-tree/: Cargo.toml
dbus-tree/examples/: adv_server.rs  server.rs
dbus-tree/src/: factory.rs  leaves.rs  lib.rs  methodtype.rs  objectpath.rs  utils.rs
dbus/examples/: adv_server.rs  argument_guide.md  client.rs  match_signal.rs  monitor.rs  properties.rs  properties_msgitem.rs  rtkit.rs  server.rs  server_cr.rs  unity_focused_window.rs
dbus/src/: blocking.rs  channel.rs  connection.rs  connection2.rs  dispatcher.rs  error.rs  ffidisp.rs  filters.rs  lib.rs  macros.rs  matchrule.rs  message.rs  nonblock.rs  objpath.rs  proxy.rs  server.rs  signalargs.rs  stdintf.rs  strings.rs  watch.rs
dbus/src/arg/: array_impl.rs  basic_impl.rs  messageitem.rs  mod.rs  msgarg.rs  variantstruct_impl.rs
dbus/src/blocking/: generated_org_freedesktop_standard_interfaces.rs  stdintf.rs
dbus/src/channel/: dispatcher.rs  ffichannel.rs  native_channel.rs  nativechannel.rs  not_native.rs
dbus/src/connection/: watch.rs
dbus/src/crossroads/: context.rs  crossroads.rs  handlers.rs  info.rs  mod.rs  path.rs  stdimpl.rs
dbus/src/ffidisp/: connection.rs  stdintf.rs  watch.rs
dbus/src/message/: matchrule.rs  parser.rs  signalargs.rs
dbus/src/nonblock/: generated_org_freedesktop_notifications.rs  generated_org_freedesktop_standard_interfaces.rs  stdintf.rs
dbus/src/tree/: factory.rs  leaves.rs  methodtype.rs  mod.rs  objectpath.rs  utils.rs
examples/: adv_server.rs  argument_guide.md  async_client.rs  client.rs  properties.rs  rtkit.rs  server.rs
libdbus-sys/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  build.rs  build_vendored.rs  cross_compile.md
libdbus-sys/src/: lib.rs
src/: connection.rs  ffi.rs  lib.rs  message.rs  methoddisp.rs  msgarg.rs  objpath.rs  pending.rs  prop.rs  stdintf.rs  strings.rs  watch.rs
src/arg/: array_impl.rs  basic_impl.rs  mod.rs  msgarg.rs  variantstruct_impl.rs
src/tree/: factory.rs  leaves.rs  methodtype.rs  mod.rs  objectpath.rs
