[package]

name = "dbus"
version = "0.5.2"
authors = ["David Henningsson <diwic@ubuntu.com>"]

description = "Bindings to D-Bus, which is a bus commonly used on Linux for inter-process communication."
repository = "https://github.com/diwic/dbus-rs"
documentation = "http://docs.rs/dbus"
keywords = ["D-Bus", "DBus"]
license = "Apache-2.0/MIT"
categories = ["os::unix-apis", "api-bindings"]
build = "build.rs"

[dependencies]
libc = "0.2.7"

[build-dependencies]
metadeps = "1"

[dev-dependencies]
tempdir = "0.3"

[package.metadata.pkg-config]
dbus-1 = "1.6"

[features]
no-string-validation = []
