[package]

name = "dbus"
version = "0.5.3"
authors = ["David Henningsson <diwic@ubuntu.com>"]

description = "Bindings to D-Bus, which is a bus commonly used on Linux for inter-process communication."
repository = "https://github.com/diwic/dbus-rs"
documentation = "http://docs.rs/dbus"
keywords = ["D-Bus", "DBus"]
license = "Apache-2.0/MIT"
categories = ["os::unix-apis", "api-bindings"]

[dependencies]
libc = "0.2.7"
libdbus-sys = { version = "0.1.0", path = "libdbus-sys" }

[dev-dependencies]
tempdir = "0.3"

[features]
no-string-validation = []
