# Dummy crate to genenerate code from latest codegen binary and run tests against that code.

[package]
name = "codegen-tests"
version = "0.1.0"
authors = ["Zeeshan Ali <zeeshanak@gnome.org>",
           "David Henningsson <diwic@ubuntu.com>"]
license = "Apache-2.0/MIT"
build = "build.rs"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
dbus = { path = "../dbus", version = "0.9", features=["futures"] }
dbus-tree = { path = "../dbus-tree", version = "0.9" }
dbus-crossroads = { path = "../dbus-crossroads" }
dbus-tokio = { path = "../dbus-tokio" }
tokio = {version = "1.0", features=["time", "net", "rt", "rt-multi-thread"]}

[build-dependencies]
dbus-codegen = { path = "../dbus-codegen" }
