[package]
name = "dbus-codegen"
version = "0.11.0"
authors = ["David Henningsson <diwic@ubuntu.com>"]
description = "Binary crate to generate Rust code from XML introspection data"
license = "Apache-2.0/MIT"
categories = ["os::unix-apis", "api-bindings"]
repository = "https://github.com/diwic/dbus-rs"
keywords = ["D-Bus", "DBus"]
readme = "README.md"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "dbus-codegen-rust"
path = "src/main.rs"

[features]
default = ["dbus"]

[dependencies]
xml-rs = "0.8.3"
dbus = { path = "../dbus", version = "0.9", optional = true }
dbus-tree = { path = "../dbus-tree", version = "0.9", optional = true }
dbus-crossroads = { path = "../dbus-crossroads", version = "0.5", optional = true }
clap = "2.20"

[badges]
maintenance = { status = "actively-developed" }


[[example]]
name = "adv_server_codegen"
required-features = ["dbus", "dbus-tree"]

[[example]]
name = "laundry_cr"
required-features = ["dbus", "dbus-crossroads"]
