[package]
name = "dbus-crossroads"
version = "0.1.0"
authors = ["David Henningsson <diwic@ubuntu.com>"]
edition = "2018"
description = "Framework for writing D-Bus method handlers"
repository = "https://github.com/diwic/dbus-rs/"
documentation = "http://docs.rs/dbus-crossroads"
keywords = ["D-Bus", "DBus", "IPC"]
license = "Apache-2.0/MIT"
categories = ["os::unix-apis", "api-bindings"]
readme = "README.md"

[dependencies]
dbus = { path = "../dbus", version = "0.8.4" }

[badges]
is-it-maintained-open-issues = { repository = "diwic/dbus-rs" }
is-it-maintained-issue-resolution = { repository = "diwic/dbus-rs" }
travis-ci = { repository = "diwic/dbus-rs" }
maintenance = { status = "actively-developed" }
