[package]
name = "dbus-crossroads"
version = "0.5.1"
authors = ["David Henningsson <diwic@ubuntu.com>"]
edition = "2018"
description = "Framework for writing D-Bus method handlers"
repository = "https://github.com/diwic/dbus-rs/"
documentation = "http://docs.rs/dbus-crossroads"
keywords = ["D-Bus", "DBus", "IPC"]
license = "Apache-2.0/MIT"
categories = ["os::unix-apis", "api-bindings"]
readme = "README.md"

[dependencies]
dbus = { path = "../dbus", version = "0.9.3" }

[dev-dependencies]
tokio = { version = "1.14.0", features = ["rt", "test-util", "macros", "sync"] }
dbus-tokio = { path = "../dbus-tokio" }

[badges]
maintenance = { status = "actively-developed" }
