[package]
name = "dbus-futures"
version = "0.1.0"
authors = ["David Henningsson <diwic@ubuntu.com>"]
edition = "2018"

[dependencies]
futures-preview = { version = "0.3.0-alpha.12" }
dbus = { path = "../dbus" }

[dependencies.thin_main_loop]
git = "https://github.com/diwic/thin_main_loop.git"
#path = "../../thin_main_loop"
features = ["futures","glib"]
optional = true

[dependencies.mio]
version = "0.6.15"
optional = true

[dependencies.tokio-reactor]
version = "0.1.8"
optional = true

[dev-dependencies.tokio]
version = "0.1.15"

[features]
tml_io = ["thin_main_loop"]
tokio_io = ["mio", "tokio-reactor"]
