[package]
name = "dbus-native"
version = "0.1.0"
authors = ["David Henningsson <diwic@ubuntu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus-strings = { path = "../dbus-strings" }
dbus-native-channel = { path = "../dbus-native-channel" }
