[package]
name = "dbus-strings"
version = "0.1.0"
authors = ["David Henningsson <diwic@ubuntu.com>"]
edition = "2018"

description = "Rust native implementation of different D-Bus string types"
repository = "https://github.com/diwic/dbus-rs"
documentation = "http://docs.rs/dbus-strings"
keywords = ["D-Bus", "DBus", "IPC"]
license = "Apache-2.0/MIT"

[dependencies]
