[package]
authors = ["David Henningsson <diwic@ubuntu.com>"]
name = "dbus-tokio"
version = "0.5.2"

description = "Makes it possible to use Tokio with D-Bus, which is a bus commonly used on Linux for inter-process communication."
repository = "https://github.com/diwic/dbus-rs"
documentation = "http://docs.rs/dbus-tokio"
keywords = ["D-Bus", "DBus"]
license = "Apache-2.0/MIT"
categories = ["os::unix-apis", "api-bindings", "asynchronous"]
edition = "2018"
readme = "README.md"

[dependencies]
dbus = { path = "../dbus", version = "0.9", features=["futures"] }
mio = "0.6.21"
libc = "0.2.69"
tokio = {version = "0.2.4", features=["time", "macros", "io-driver", "rt-core", "rt-util", "rt-threaded", "stream"]}
dbus-crossroads = { path = "../dbus-crossroads", optional = true, version = "0.3" }

[dev-dependencies]
futures = "0.3.1"
tokio = {version = "0.2.4", features=["time", "macros", "io-driver", "rt-core", "rt-util", "rt-threaded", "stream", "blocking"]}
dbus-tree = {path = "../dbus-tree", version="0.9"}

[badges]
is-it-maintained-open-issues = { repository = "diwic/dbus-rs" }
is-it-maintained-issue-resolution = { repository = "diwic/dbus-rs" }
travis-ci = { repository = "diwic/dbus-rs" }

[[example]]
name = "tokio02_server_cr"
required-features = ["dbus-crossroads"]

[[example]]
name = "tokio_adv_server_cr"
required-features = ["dbus-crossroads"]
