[package]
authors = ["David Henningsson <diwic@ubuntu.com>"]
name = "dbus-tokio"
version = "0.7.3"

description = "Makes it possible to use Tokio with D-Bus, which is a bus commonly used on Linux for inter-process communication."
repository = "https://github.com/diwic/dbus-rs"
documentation = "http://docs.rs/dbus-tokio"
keywords = ["D-Bus", "DBus"]
license = "Apache-2.0/MIT"
categories = ["os::unix-apis", "api-bindings", "asynchronous"]
edition = "2018"
readme = "README.md"

[dependencies]
dbus = { path = "../dbus", version = "0.9", features=["futures"] }
libc = "0.2.69"
tokio = {version = "1.0", features=["time", "net"]}
dbus-crossroads = { path = "../dbus-crossroads", optional = true, version = "0.3" }

[dev-dependencies]
futures = "0.3.1"
tokio = {version = "1.0", features=["time", "net", "macros", "rt-multi-thread"]}
dbus-tree = {path = "../dbus-tree", version="0.9"}

[badges]
is-it-maintained-open-issues = { repository = "diwic/dbus-rs" }
is-it-maintained-issue-resolution = { repository = "diwic/dbus-rs" }
travis-ci = { repository = "diwic/dbus-rs" }

[[example]]
name = "tokio_server_cr"
required-features = ["dbus-crossroads"]

[[example]]
name = "tokio_adv_server_cr"
required-features = ["dbus-crossroads"]
