[package]

name = "dbus"
version = "0.6.5"
authors = ["David Henningsson <diwic@ubuntu.com>"]

description = "Bindings to D-Bus, which is a bus commonly used on Linux for inter-process communication."
repository = "https://github.com/diwic/dbus-rs"
documentation = "http://docs.rs/dbus"
keywords = ["D-Bus", "DBus", "IPC"]
license = "Apache-2.0/MIT"
categories = ["os::unix-apis", "api-bindings"]
readme = "../README.md"

[dependencies]
libc = "0.2.7"
libdbus-sys = { path = "../libdbus-sys", version = "0.2" }

[dev-dependencies]
tempdir = "0.3"

[features]
no-string-validation = []

[badges]
is-it-maintained-open-issues = { repository = "diwic/dbus-rs" }
is-it-maintained-issue-resolution = { repository = "diwic/dbus-rs" }
