[package]

name = "dbus"
version = "0.8.4"
authors = ["David Henningsson <diwic@ubuntu.com>"]

description = "Bindings to D-Bus, which is a bus commonly used on Linux for inter-process communication."
repository = "https://github.com/diwic/dbus-rs"
documentation = "http://docs.rs/dbus"
keywords = ["D-Bus", "DBus", "IPC"]
license = "Apache-2.0/MIT"
categories = ["os::unix-apis", "api-bindings"]
readme = "../README.md"
edition = "2018"

[dependencies]
libc = "0.2.66"
libdbus-sys = { path = "../libdbus-sys", version = "0.2" }
futures-util = { version = "0.3", optional = true }
futures-channel = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
no-string-validation = []
futures = ["futures-util", "futures-channel"]

[badges]
is-it-maintained-open-issues = { repository = "diwic/dbus-rs" }
is-it-maintained-issue-resolution = { repository = "diwic/dbus-rs" }
travis-ci = { repository = "diwic/dbus-rs" }
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
features = [ "futures" ]
