[package]

name = "libdbus-sys"
version = "0.2.2"
authors = ["David Henningsson <diwic@ubuntu.com>"]

description = "FFI bindings to libdbus."
repository = "https://github.com/diwic/dbus-rs"
documentation = "http://docs.rs/libdbus-sys"
keywords = ["D-Bus", "DBus", "libdbus"]
license = "Apache-2.0/MIT"
categories = ["os::unix-apis", "external-ffi-bindings"]
build = "build.rs"
links = "dbus"

[build-dependencies]
pkg-config = "0.3"

[package.metadata.pkg-config]
dbus-1 = "1.6"

[badges]
is-it-maintained-open-issues = { repository = "diwic/dbus-rs" }
is-it-maintained-issue-resolution = { repository = "diwic/dbus-rs" }
travis-ci = { repository = "diwic/dbus-rs" }
